# ordis

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
app/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.css  App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs  main.rs  pty_manager.rs
app/src/components/: ActivityBar.tsx  ApprovalBar.tsx  ArtifactPopover.tsx  ArtifactSidebar.tsx  ChatView.tsx  CodeBlock.tsx  CodeViewer.tsx  CommandPalette.tsx  Dashboard.tsx  DependencyGraph.tsx  DiffViewer.tsx  FileBrowser.tsx  ImageViewer.tsx  InputArea.tsx  KanbanBoard.tsx  MarkdownViewer.tsx  MessageBubble.tsx  PaneBar.tsx  PdfViewer.tsx  ProjectSidebar.tsx  SessionPane.tsx  Settings.tsx  SplitDivider.tsx  StatusBar.tsx  TaskSidebar.tsx  TaskTimeline.tsx  TerminalPane.tsx  ThinkingBlock.tsx  Toast.tsx  ToolBlock.tsx  ViewerPane.tsx
app/src/lib/: artifactParser.test.ts  artifactParser.ts  artifacts.test.ts  artifacts.ts  commands.ts  events.ts  pluginLoader.ts  plugins.ts  ptyClient.ts  sessionEventBus.test.ts  sessionEventBus.ts  store.ts  tasks.ts  toast.ts  types.ts
app/src/plugins/: artifactViewerPlugin.tsx  contentViewerPlugin.tsx  fileBrowserPlugin.tsx  projectManagementPlugin.tsx  settingsPlugin.tsx  testPlugin.tsx
crates/process/: Cargo.toml
crates/process/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
docs/: INDEX.md
docs/dev/: architecture.md  contributing.md
docs/user/: getting-started.md  usage.md
