[workspace]
resolver = "2"
members = [
    "crates/protocol",
    "crates/process",
    "app/src-tauri",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
