[package]
name = "ordis"
version.workspace = true
description = "Desktop interface for Claude Code"
authors = ["Simon"]
edition.workspace = true
license.workspace = true

[lib]
name = "ordis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-pty = "0.2"
tauri-plugin-notification = "2"
dirs = "6"
toml = "0.8"
base64 = "0.22"
similar = "2"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.9"
tokio = { version = "1", features = ["sync"] }
serde.workspace = true
serde_json.workspace = true
